# FullBody-Pose-Gesture

./: CMakeLists.txt  LICENSE  README.md  index.py  main.py
application/: HandTrackingService.py
config/: dependencies.py  freePIE_init.py
controllers/: hand_controller.py  head_controller.py
domain/: HandData.py
infrastructure/: CameraCapture.py  CompilerAndExecute.py  HandDetectorAdapter.py  SocketAdapter.py  VRDeviceController.py  XRDeviceController.py
interface/: HandTrackingApp.py
services/: hand_service.py  head_service.py
src/vrDriver/: main.cpp
utils/: video_utils.py
